# USTC-cambricon214

./: .gitignore
face/: CMakeLists.txt
face/kernel/: CMakeLists.txt  tags
face/kernel/include/: face_common.hpp  face_config.hpp  face_connector.hpp  face_eventbus.hpp  face_frame.hpp  face_module.hpp  face_observer.hpp  face_pipeline.hpp
face/kernel/src/: face_config.cpp  face_connector.cpp  face_frame.cpp  face_module.cpp  face_observer.cpp  face_pipeline.cpp
face/kernel/utils/: face_mempool.hpp  face_queue.hpp  face_rwlock.hpp  face_spinlock.hpp  face_threadpool.hpp
face/modules/: frame.cpp  frame.h  frame.hpp  main.cpp  module.hpp
face/modules/decoder/: decoder.hpp  source.cpp  source.hpp
face/modules/decoder/include/: ffmpeg.hpp  source.hpp
face/modules/decoder/src/: ffmpeg.cpp  source.cpp
face/modules/feature_extract/include/: feature_extract.hpp
face/modules/feature_extract/src/: feature_extract.cpp
face/modules/inference/include/: infer.hpp
face/modules/inference/postproc/: anchor_generator.cpp  anchor_generator.h  retinface_pos.cpp  retinface_pos.hpp
face/modules/inference/preproc/: retinface_pre.cpp  retinface_pre.hpp
face/modules/inference/src/: infer.cpp
face/modules/opencvdetect/include/: opencvdetect.hpp
face/modules/opencvdetect/src/: opencvdetect.cpp
face/modules/opencvextract/include/: opencvextract.hpp
face/modules/opencvextract/src/: opencvextract.cpp
face/modules/show/include/: show.hpp
face/modules/show/src/: show.cpp
face/modules/utils/include/: posprocess_base.hpp  preprocess_base.hpp  reflex_object.hpp
face/modules/utils/src/: postprocess_base.cpp  preprocess_base.cpp  reflex_object.cpp
face/modules/warpffine/include/: warp.hpp
face/modules/warpffine/src/: warp.cpp
